--- a/src/pages/projects/wti/index.mdx
+++ b/src/pages/projects/wti/index.mdx
@@ -2,6 +2,7 @@ import LayoutProject from '../../../components/layoutProject'
 import ScreenShot from '../../../components/screenshot'
 import wtiProfile from '../../../assets/images/projects/wti-profile.png'
 import wtiPrograms from '../../../assets/images/projects/wti-programs.png'
+import YouTubeEmbed from '../../../components/youtubeEmbed'
 
 <p className="lead">**In a pioneering effort to match the ambitious goals of the Wu Tsai Institute at Yale, a newly established research hub dedicated to exploring the intricacies of the human brain, our task was to create an equally ambitious digital presence.** This project culminated in a state-of-the-art website that received critical acclaim and earned nominations for two prestigious Webbys: Best School/University Site and Best Mobile Visual Design - Aesthetic. Competing against heavyweights like Spotify’s Wrapped, the recognition highlighted our innovative approach and the stunning visual identity we crafted for the institute.</p>
 
@@ -14,6 +15,10 @@ The client’s satisfaction was paramount throughout the project, and their feed
 ### Visual Design and Animation
 
 Given the institute’s focus on a “big bet” on brain research, they desired a website that was as monumental as their mission. For the project, we engaged a talented animator [Shira Inbar](https://shira-inbar.com/), previously noted for her work with the New York Times, to achieve this. This collaboration resulted in captivating animations adorning the homepage, setting a dynamic tone for the site and instantly engaging visitors.
+
+<YouTubeEmbed embedId="vUGi-sQBjI4"/>
+<br/>
+<YouTubeEmbed embedId="WwmYTUG2jDM"/>
 
 ### Adapting to Challenges
 
