--- a/src/pages/projects/emulsify/index.mdx
+++ b/src/pages/projects/emulsify/index.mdx
@@ -30,8 +30,9 @@ My dedication to Emulsify extends beyond project management; it is about cultiva
 export default function MDXPage({ children }) {
   return (
     <LayoutProject
-      title="Emulsify Design System for Figma and Drupal"
-      projectRole="Project Lead"
+      title="Emulsify is the go-to design system solution for hundreds of designer and developer teams working on Drupal sites"
+      subtitle="I guide the strategic vision for the project, ensuring its alignment with the evolving needs of the Drupal community."
+      projectRole="Product Lead"
       backLink={true}
       links={[
         { text: "Emulsify.info", url: "https://www.emulsify.info/" },
