--- a/src/pages/projects/wti/index.mdx
+++ b/src/pages/projects/wti/index.mdx
@@ -35,7 +35,7 @@ The Wu Tsai Institute website project was a testament to the ability to create v
 export default function MDXPage({ children }) {
   return (
     <LayoutProject
-      title="Wu Tsai Institute lost a Webby to Spotify"
+      title="Wu Tsai Institute design lost a Webby to Spotify"
       subtitle="Connecting neuroscience and data science to accelerate breakthroughs in understanding cognition."
       projectRole="Creative Director"
       backLink={true}
