--- a/src/pages/projects/yale-ds/index.mdx
+++ b/src/pages/projects/yale-ds/index.mdx
@@ -4,13 +4,29 @@ import wtiProfile from '../../../assets/images/projects/wti-profile.png'
 import wtiPrograms from '../../../assets/images/projects/wti-programs.png'
 import YouTubeEmbed from '../../../components/youtubeEmbed'
 
-<p className="lead">**This project will have to be reviewed privately.** For now, enjoy the public links above.</p>
+<p className="lead">I led the team as the Creative Director, working alongside a UI designer and a frontend engineer from my team at Four Kitchens while teaming up with a UX designer and an accessibility expert from Yale.</p>
+
+A design system was born, and it delivered the following:
+
+* **A suite of design tokens** that define Yale's digital brand and provide flexibility for future digital projects—web, react, iOS, etc.
+* **A library of adaptable and customizable components** is available in their CMS. Each component was thoroughly accessibility tested with automated tooling and direct user testing with people with disabilities.
+* **A theming system that gives users choices** in how their site looks while maintaining Yale's brand. Giving users the ability to choose how their school or department site looks has increased the adoption of Yale's centralized site service.
+
+The biggest challenge for this project was a conflict between our work cultures.
+
+My team is a high-trust environment. We share rough working drafts to get opinions and ensure we're on the right track before we tighten up a deliverable or a document.
+
+Yale is a dot all your i's and cross your t's before sending anything out culture, as befits an institution with a 300-year history.
+
+Once we uncovered and identified this friction, I had my team adapt our working style to accommodate theirs. Behind the scenes, I worked with critical stakeholders to encourage a more open process. 
+
+Within a few cycles, we created a hybrid culture that adopted the best of both worlds by sharing drafts one-on-one with Yale people and buttoning them up for group presentations.
 
 export default function MDXPage({ children }) {
   return (
     <LayoutProject
-      title="Yale's first design system"
-      subtitle="Led the design team to create Yale’s first digital design system, which is used on all new websites."
+      title="All new Yale sites use the design system I crafted"
+      subtitle="Yale has more than a thousand websites, and now, with its first digital design system, it can keep them all on brand."
       projectRole="Creative Director"
       backLink={true}
       links={[
