--- a/src/pages/projects/yale-ds/index.mdx
+++ b/src/pages/projects/yale-ds/index.mdx
@@ -25,7 +25,7 @@ Within a few cycles, we created a hybrid culture that adopted the best of both w
 export default function MDXPage({ children }) {
   return (
     <LayoutProject
-      title="All new Yale sites use the design system I crafted"
+      title="All new Yale sites use the design system I established"
       subtitle="Yale has more than a thousand websites, and now, with its first digital design system, it can keep them all on brand."
       projectRole="Creative Director"
       backLink={true}
