--- a/src/pages/projects/bits-and-mortar/index.mdx
+++ b/src/pages/projects/bits-and-mortar/index.mdx
@@ -3,6 +3,7 @@ import ScreenShot from '../../../components/screenshot'
 import YouTubeEmbed from '../../../components/youtubeEmbed'
 import bnmHome from '../../../assets/images/projects/bnm-homepage.png'
 import bnmInside from '../../../assets/images/projects/bnm-inside.png'
+import bnmTile from '../../../assets/images/projects/bnm-tile.png'
 
 <p className="lead">Gamers have a tough choice—buying a roleplaying game book from a local store supports the community; however, purchasing the game directly from the publisher gets them the book and the PDF version, which they can't get from the store.</p>
 
@@ -21,6 +22,7 @@ Successes:
 * 220+ publishers are part of the program, representing the majority of the tabletop roleplaying game industry
 * 24,000+ customers use the site to maintain their digital games library.
 
+<ScreenShot src={bnmTile} title="Bits and Mortar Design Tile"/>
 <ScreenShot src={bnmHome} title="Bits and Mortar new homepage"/>
 <ScreenShot src={bnmInside} title="Bits and Mortar new inside page"/>
 
@@ -29,7 +31,7 @@ export default function MDXPage({ children }) {
     <LayoutProject
       title="Bits and Mortar ensures that every tabletop game store can deliver files to their customers"
       subtitle="When someone buys a tabletop roleplaying game—like Dungeons and Dragons—from any local game store worldwide, we send them a PDF."
-      projectRole="Product Designer and Developer"
+      projectRole="Owner, Product Designer, and Developer"
       backLink={true}
       links={[
         { text: "Bits and Mortar (New site coming soon)", url: "https://www.bits-and-mortar.com/" },
