--- a/src/content/nyu.mdx
+++ b/src/content/nyu.mdx
@@ -7,8 +7,9 @@ links:
     url: "https://publichealth.nyu.edu/"
 ---
 import ScreenShot from '@/components/ui/screenshot'
-import nyuHome from '@/assets/images/projects/nyu-home.jpeg'
-import nyuLP from '@/assets/images/projects/nyu-lp.jpeg'
+import nyuHome from '@/assets/images/projects/nyu-home.png'
+import nyuLP from '@/assets/images/projects/nyu-lp.png'
+
 
 <p className="lead">**In a pioneering project during a transformative period, the NYU School of Global Public Health (GPH) embarked on a mission to revolutionize its digital footprint.** This venture was a website redesign and a comprehensive reimagination of how their ethos and dynamism could be encapsulated and communicated online. The result was a digital platform showcasing the school's vibrant energy and multi-disciplinary approach, significantly enhancing the user experience.</p>
 
